# pprovidence

./: CMakeLists.txt  README.md  nastepne-zajecia.txt
docs/: seq_diag.txt
include/: beholder.cpp  beholder.hpp  commandIOMinion.hpp  commandLoader.hpp  commandParser.hpp  datatypes.hpp  openSSLBearer.cpp  openSSLBearer.hpp  overseer.hpp  passwd.cpp  passwd.hpp  postmaster.hpp  protocolMinion.hpp  protominion.hpp  scribe.cpp  scribe.hpp  smtpSender.cpp  smtpSender.hpp  smtpSocket.cpp  smtpSocket.hpp  timerKiller.hpp
lib/: base64.h  openSSLBearer.hpp  practicalSocket.cpp  practicalSocket.h
src/: a.out  aliases  asio_test.cpp  beholder.cpp  commandIOMinion.cpp  commandLoader.cpp  commandParser.cpp  hosts.cfg  main.cpp  makefile  openSSLBearer.cpp  overseer.cpp  passwd.cpp  postmaster.cpp  practicalSocket.cpp  protocolMinion.cpp  scribe.cpp  smtpSender.cpp  smtpSocket.cpp  test.cpp  threadex.cpp
test/beholder/: CMakeLists.txt  beholderTest.cpp
test/commandIOMinion/: CMakeLists.txt  commandIOMinionTest.cpp
test/commandLoader/: commandLoaderTest.cpp
test/commandParser/: CMakeLists.txt  commandParserTest.cpp
test/overseer/: CMakeLists.txt  overseerTest.cpp
test/protocolMinion/: CMakeLists.txt  protocolMinionTest.cpp
test/scribe/: CMakeLists.txt  scribeTest.cpp
